--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Getting Started</title>
-    <script src="https://unpkg.com/lodash@4.16.6"></script>
 </head>
 
 <body>
