eslint change, bootstrap working, sass with webpack

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,30 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Getting Started</title>
 </head>
 
 <body>
     <h1>Success!</h1>
+    <div class="row">
+        <div class="jumbotron text-center">
+            <h1>jumbotron!</h1>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Dropdown
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </div>
 </body>
 
 </html>
